@@ -63,6 +63,11 @@ Version 3.2.2 - under development
   infinite parsing loop when parsing `rest_of_line` at the end of the input string.
   Reported by user Kylotan, thanks! (Issue #593)
 
+- Enhancements and extra input validation for `pyparsing.util.make_compressed_re` - see
+  usage in `examples/complex_chemical_formulas.py` and result in the generated railroad
+  diagram `examples/complex_chemical_formulas_diagram.html`. Properly escapes characters
+  like "." and "*" that have special meaning in regular expressions.
+
 - Better exception message for `MatchFirst` and `Or` expressions, showing all alternatives
   rather than just the first one. Fixes Issue #592, reported by Focke, thanks!
 
